[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/ui/CharacterTalentTreeUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/characters/player/player_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/empty_character_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/player_character_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/glaciela_character_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=8]
[ext_resource path="res://themes/Blur.tres" type="Material" id=9]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="CharacterTalentTreeUI" type="CanvasLayer"]
pause_mode = 2
layer = 99

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="Control"]
material = ExtResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1031.0
margin_top = -579.0
margin_right = 2209.0
margin_bottom = 1581.0
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.5
margin_top = -307.0
margin_right = 436.5
margin_bottom = 307.0
texture = ExtResource( 5 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -306.0
margin_top = 13.0
margin_right = 306.0
margin_bottom = 61.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]=== [color=#ffd703]Character Talent Tree[/color] ==="
text = "=== Character Talent Tree ==="
scroll_active = false

[node name="CloseButtonMainUI" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -307.0
margin_right = -396.0
margin_bottom = -267.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
expand = true

[node name="CharacterButtonsUI" type="Control" parent="Control/NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CharacterSlot1" type="TextureButton" parent="Control/NinePatchRect/CharacterButtonsUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -147.0
margin_right = 280.0
margin_bottom = 33.0
texture_normal = ExtResource( 6 )
expand = true

[node name="CharacterSlot2" type="TextureButton" parent="Control/NinePatchRect/CharacterButtonsUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -147.0
margin_right = 90.0
margin_bottom = 33.0
texture_normal = ExtResource( 7 )
expand = true

[node name="CharacterSlot3" type="TextureButton" parent="Control/NinePatchRect/CharacterButtonsUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -147.0
margin_right = -100.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
expand = true

[node name="TalentTreeControl" type="Control" parent="Control/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 3.0

[node name="PlayerControl" type="Control" parent="Control/NinePatchRect/TalentTreeControl"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Control/NinePatchRect/TalentTreeControl/PlayerControl"]
position = Vector2( 77.5, 147 )
scale = Vector2( 7.5, 7.5 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/NinePatchRect/TalentTreeControl/PlayerControl"]
anchor_right = 21.766
anchor_bottom = 15.255
margin_left = 153.0
margin_top = 83.0
margin_right = -45.64
margin_bottom = -121.2
rect_min_size = Vector2( 566, 355 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer"]
margin_right = 540.0
margin_bottom = 400.0
rect_min_size = Vector2( 540, 400 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_right = 530.0
margin_bottom = 400.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#ffd703]Cyclone waves[/color]
Doing a charged attack after Basic Attack SEQ 2 unleashes a flurry of windblades to deal multiple instances of Physical DMG.
([color=#ffd703]ATK[/color], [color=#ffd703]ATK[/color], Hold [color=#ffd703]ATK[/color])"
text = "Cyclone waves
Doing a charged attack after Basic Attack SEQ 2 unleashes a flurry of windblades to deal multiple instances of Physical DMG.
(ATK, ATK, Hold ATK)"

[node name="TextureButton" type="TextureButton" parent="Control/NinePatchRect/TalentTreeControl/PlayerControl/ScrollContainer/VBoxContainer"]
margin_left = 540.0
margin_top = 4.0
margin_right = 556.0
margin_bottom = 12.0
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )

[connection signal="pressed" from="Control/NinePatchRect/CloseButtonMainUI" to="Control" method="_on_CloseButtonMainUI_pressed"]
